benchmark scripts refactoring